--- a/games/sea-navigator.html
+++ b/games/sea-navigator.html
@@ -66,6 +66,18 @@
     grid-template-columns:1fr 1fr;
     gap:10px;
   }
+  <div class="touchControls">
+  <div class="card" style="padding:12px">
+    <div class="row" style="margin-bottom:10px"><span>Mobiele besturing</span><strong>Touch</strong></div>
+    <div class="dpad">
+      <button class="ghost up"    data-key="up">↑</button>
+      <button class="ghost left"  data-key="left">←</button>
+      <button class="ghost right" data-key="right">→</button>
+      <button class="ghost down"  data-key="down">↓</button>
+    </div>
+  </div>
+</div>
+
   button{
     padding:10px 12px;
     border-radius:12px;
@@ -73,6 +85,38 @@
     font-weight:900;
     cursor:pointer;
   }
+/* Mobiele besturing */
+.touchControls{
+  display:none;
+  gap:10px;
+  margin-top:10px;
+}
+.touchControls .dpad{
+  display:grid;
+  grid-template-columns:64px 64px 64px;
+  grid-template-rows:64px 64px 64px;
+  gap:10px;
+  justify-content:center;
+}
+.touchControls .dpad button{
+  width:64px;height:64px;
+  border-radius:16px;
+  font-size:22px;
+  font-weight:900;
+  touch-action: manipulation;
+}
+.touchControls .dpad .up{grid-column:2;grid-row:1}
+.touchControls .dpad .left{grid-column:1;grid-row:2}
+.touchControls .dpad .right{grid-column:3;grid-row:2}
+.touchControls .dpad .down{grid-column:2;grid-row:3}
+
+@media (max-width: 980px){
+  .touchControls{display:block;}
+}
+
+/* Belangrijk: voorkomt scroll/zoom-gedoe op canvas */
+canvas{ touch-action: none; }
+
   .primary{background:#60a5fa;color:#081124}
   .secondary{background:#1e293b;color:#e7eefc}
   .danger{background:#7f1d1d;color:#e7eefc}
@@ -256,6 +300,40 @@
 
   // Input
   const keys = { left:false, right:false, up:false, down:false };
+
+  // --- Touch controls (mobile) ---
+function setKey(name, isDown){
+  keys[name] = isDown;
+}
+
+// Houd ingedrukt = blijven sturen/versnellen
+document.querySelectorAll("[data-key]").forEach(btn => {
+  const k = btn.dataset.key;
+
+  const down = (e) => {
+    e.preventDefault();
+    setKey(k, true);
+    // iOS: soms stopt audio/animatie bij geen user gesture; dit helpt ook.
+    if (!running) return;
+  };
+
+  const up = (e) => {
+    e.preventDefault();
+    setKey(k, false);
+  };
+
+  // Pointer events werken voor touch + mouse
+  btn.addEventListener("pointerdown", down, {passive:false});
+  btn.addEventListener("pointerup", up, {passive:false});
+  btn.addEventListener("pointercancel", up, {passive:false});
+  btn.addEventListener("pointerleave", up, {passive:false});
+});
+
+// Extra safety: als user van tab wisselt, laat los
+window.addEventListener("blur", () => {
+  keys.left = keys.right = keys.up = keys.down = false;
+});
+
 
   // ---------- UI ----------
   function setUI(){
